Added endpoint for vocab structure
Ref https://gitlab.com/oersi/oersi-frontend/-/issues/67
